<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kid.ninjacovergame.MainActivity">

    <TextView
        android:id="@+id/tv_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LV"
        android:textSize="16dp"
        android:max="100"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_level" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_level"
        android:text="@string/game_introduce"
        android:textSize="16dp" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/START"
        android:layout_above="@+id/button_story"
        android:layout_alignLeft="@+id/button_exit"
        android:layout_alignStart="@+id/button_exit" />
    <Button
        android:id="@+id/button_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/story_button"
        android:layout_above="@+id/button_tutorial"
        android:layout_alignLeft="@+id/button_exit"
        android:layout_alignStart="@+id/button_exit" />

    <Button
        android:id="@+id/button_tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_exit"
        android:layout_centerHorizontal="true"
        android:text="@string/TUTORIAL" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/exit" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_select"
        android:id="@+id/btn_select"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:visibility="invisible"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_advertisement"
        android:text="@string/advertisement"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/progressBar"
        android:layout_toEndOf="@+id/progressBar" />


</RelativeLayout>
