<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kid.ninjacovergame.TutorialActivity">

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Tutorial_Welcome" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/welcome"/>


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_test"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_tutorial"></RadioButton>

        <RadioButton
            android:id="@+id/radio_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center_tutorial"></RadioButton>

        <RadioButton
            android:id="@+id/radio_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_tutorial"></RadioButton>
    </RadioGroup>

    <Button
        android:id="@+id/button_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="62dp"
        android:layout_marginStart="62dp"
        android:text="@string/test" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_test"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_toEndOf="@+id/button_test"
        android:layout_toRightOf="@+id/button_test"
        android:text="@string/back" />

</RelativeLayout>
